feat: async ai tag regenerate with single-call strategy